--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>CursoAngular</title>
+  <title>CursoAngular4</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./assets/styles.css" />
 </head>
 <body>
-  <app-root></app-root>
+  <h1>Curso de Angular 4 - victorroblesweb.es</h1>
+  <app-root>Loading...</app-root>
 </body>
 </html>
